--- a/src/App.css
+++ b/src/App.css
@@ -139,3 +139,53 @@ body {
   font-weight: bold;
   margin-bottom: 5px;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  width: 350px;
+  background: white;
+  padding: 2rem;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  color: #222;
+}
+
+.modal input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 80%;
+  margin-top: 1rem;
+}
+
+.modal-buttons {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-buttons button {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 90px;
+}
+
+.modal-enter {
+  background-color: #6aaa64;
+}
+.modal-cancel {
+  background-color: #e74c3c;
+}
