--- a/src/components/SoloGame.css
+++ b/src/components/SoloGame.css
@@ -1,29 +1,33 @@
 .solo-game-container {
   display: flex;
-  justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-color: #cce0f5;
+  flex-direction: column;
+}
+
+.game-header {
+  top: 10vh;
+  width: 95%;
+  display: flex;
+  justify-content: space-between !important ; 
+  align-items: center;
+  padding: 20px 2.5%;
+  z-index: 10;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .spell-counter {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  font-size: 18px;
-  font-weight: bold;
-  background-color: #add8f0;
+  background-color: #dcdcdc;
   padding: 8px 12px;
   border-radius: 8px;
   border: 4px solid #fff;
-  color: #5a565d;
+  color: #222;
   z-index: 10;
 }
 
-.exit {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+.exit {  
   font-size: 18px;
   font-weight: bold;
   background-color: #f02929;
@@ -35,6 +39,14 @@
   cursor: pointer;
 }
 
+.game-container {
+  width: 100%;
+  min-height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
 
 .game-box {
   background-color: #add8f0;
@@ -56,11 +68,19 @@
 .username {
   font-weight: bold;
   font-size: 1.5rem;
-  color: #444;
+  color: #222;
   padding: 10px 15px;
   border: 4px solid #fff;
   background-color: #dcdcdc;
   border-radius: 8px;
+}
+
+.message {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  color: #222;
 }
 
 .banner {
@@ -168,50 +188,108 @@
 .row-element {
   margin-left: 8px;
   font-size: 1.5rem;
+  transition: transform 0.8s ease-in-out, opacity 0.8s;
 }
 
-.message {
-  font-size: 1.25rem;
+.info-container {
+  width: 420px;
+  background-color: #a58c67;
+  border: 3px solid #444;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.info-container h2 {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.enemy-image {
+  width: 160px;
+  height: 160px;
+  margin-inline: auto;
+}
+
+.explosion {
+  width: 160px;
+  height: 160px;
+  margin-left: -160px;
+  visibility: hidden;
+}
+
+.enemy-health-bar {
+  width: 100%;
+  height: 20px;
+  background-color: #333; 
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.enemy-hp {
+  height: 100%;
+  background-color: #1fbd0a; 
+  transition: width 0.3s ease;
+}
+
+.divider {
+  margin: 20px 0;
+  border: none;
+  border-top: 2px solid #fff;
+}
+
+.keyboard-preview {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
+  gap: 4px;
+}
+
+.key {
+  padding: 10px 14px;
+  font-size: 12px;
   font-weight: bold;
-  margin-top: 15px;
-  color: #222;
+  border: none;
+  border-radius: 4px;
+  border: 2px solid #333;
+  background-color: #ede4e3;
+  color: black;
 }
 
-@media (max-width: 815px) {
-  .solo-game-container {
+.key.correct {
+  background-color: #6aaa64;
+  color: white;
+}
+
+.key.present {
+  background-color: #c9b458;
+  color: white;
+}
+
+.key.absent {
+  background-color: #787c7e;
+  color: white;
+}
+
+@media (max-width: 895px) {
+  .game-container {
     flex-direction: column;
   }
-
-  .spell-counter {
-    position: relative;
-    top: 0;
-    left: 0;
-    margin: 10px 0px;
-    justify-content: flex-start;
-  }
-  .exit {
-    position: relative;
-    top: 0;
-    left: 0;
-    margin: 10px 0px;
-    justify-content: flex-start;
+  .info-container {
+    margin-top: 20px;
   }
 }
 
-@keyframes convergeToWizard {
-  0% {
-    transform: translate(0, 0) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: translate(-300px, -125px) scale(0.3); 
-    opacity: 0;
-  }
-}
-
-.converge-element {
-  animation: convergeToWizard 0.8s ease-in-out forwards;
-}
 
 @keyframes flip {
   0% {
@@ -227,4 +305,20 @@
 
 .flipY {
   animation: flip 0.5s ease;
+}
+
+@keyframes flashRed {
+  0% {
+    background-color: #add8f0;
+  }  
+  50% {
+    background-color: #e06666ff;
+  }
+  100% {
+    background-color: #add8f0;
+  }
+}
+
+.takeDMG {
+  animation: flashRed 1s ease-in-out forwards;
 }
